# rust-sdk

./: Cargo.toml  README.md
.github/: dependabot.yml
.github/workflows/: build.yml  release.yml  tests.yml
examples/: basic.rs  diagnostic.rs
src/: client.rs  error.rs  lib.rs  query.rs  utils.rs
src/endpoints/: mod.rs
src/models/: card.rs  card_resume.rs  common.rs  enums.rs  int_endpoint.rs  mod.rs  primitive_lists.rs  serie.rs  serie_resume.rs  set.rs  set_resume.rs  string_endpoint.rs
tests/: integration.rs
