[package]
name = "tcgdex_sdk"
version = "0.1.0"
edition = "2021"
description = "A Rust SDK for the TCGdex API"
license = "MIT"
repository = "https://github.com/tcgdex/rust-sdk"

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
url = "2.3"
tokio = { version = "1.25", features = ["full"] }
async-trait = "0.1"
strum = { version = "0.24", features = ["derive"] }
strum_macros = "0.27"
bytes = "1.4"
